less verbose by removing non-essential information.

---
*** Gamegrid now determines its default glyph size based on display
dimensions, instead of always using 16 pixels. As a result, Tetris,
Snake and Pong are more playable on HiDPI displays.

** Filecache

---
*** Completing filenames in the minibuffer via 'C-TAB' now uses the
styles as configured by the variable 'completion-styles'.


* Startup Changes in Emacs 26.1


* Changes in Emacs 26.1

+++
** Option 'buffer-offer-save' can be set to new value, 'always'.  When
   set to 'always', the command `save-some-buffers' will always offer
   this buffer for saving.

** Security vulnerability related to Enriched Text mode is removed.

+++
*** Enriched Text mode does not evaluate Lisp in 'display' properties.
This feature allows saving 'display' properties as part of text.
Emacs 'display' properties support evaluation of arbitrary Lisp forms
as part of processing the property for display, so displaying Enriched
Text could be vulnerable to executing arbitrary malicious Lisp code
included in the text (e.g., sent as part of an email message).
Therefore, execution of arbitrary Lisp forms in 'display' properties
decoded by Enriched Text mode is now disabled by default.  Customize
the new option 'enriched-allow-eval-in-display-props' to a non-nil
value to allow Lisp evaluation in decoded 'display' properties.

This vulnerability was introduced in Emacs 21.1.  To work around that
in Emacs versions before 25.3, append the following to your ~/.emacs
init file:

  (eval-after-load "enriched"
    '(defun enriched-decode-display-prop (start end &optional param)
       (list start end)))

+++
** Functions in 'write-contents-functions' can fully short-circuit the
'save-buffer' process.  Previously, saving a buffer that was not
visiting a file would always prompt for a file name.  Now it only does
so if 'write-contents-functions' is nil (or all its functions return
nil).

---